[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/textures/background.png" type="Texture" id=1]
[ext_resource path="res://player/player.tscn" type="PackedScene" id=2]
[ext_resource path="res://environment/ground.tscn" type="PackedScene" id=3]
[ext_resource path="res://environment/obstacle_spawner.tscn" type="PackedScene" id=4]
[ext_resource path="res://environment/HUD.tscn" type="PackedScene" id=5]
[ext_resource path="res://world.gd" type="Script" id=6]
[ext_resource path="res://environment/menu_layer.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/fonts/flappyfont.TTF" type="DynamicFontData" id=8]
[ext_resource path="res://player/ai_player.tscn" type="PackedScene" id=9]

[sub_resource type="RectangleShape2D" id=2]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 8 )

[node name="world" type="Node2D"]
script = ExtResource( 6 )

[node name="TouchScreenButton" type="TouchScreenButton" parent="."]
position = Vector2( -235, -26 )
scale = Vector2( 50, 50 )
shape = SubResource( 2 )
action = "flap"

[node name="HUD" parent="." instance=ExtResource( 5 )]

[node name="menu_layer" parent="." instance=ExtResource( 7 )]

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="obstacle_spawner" parent="." instance=ExtResource( 4 )]
position = Vector2( 800, 0 )

[node name="ground" parent="." instance=ExtResource( 3 )]
position = Vector2( -1, 687 )

[node name="player" parent="." instance=ExtResource( 2 )]
position = Vector2( 105, 428 )

[node name="Label2" type="Label" parent="."]
margin_left = 3.0
margin_top = 6.0
margin_right = 89.0
margin_bottom = 37.0
custom_colors/font_color = Color( 1, 0.156863, 0.156863, 1 )
custom_fonts/font = SubResource( 1 )
text = "MTK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="player2" parent="." instance=ExtResource( 9 )]
position = Vector2( 105, 547 )

[connection signal="start_game" from="menu_layer" to="." method="_on_menu_layer_start_game"]
[connection signal="body_entered" from="ground/death_zone" to="." method="_on_death_zone_body_entered"]
[connection signal="died" from="player" to="." method="_on_player_died"]
[connection signal="died" from="player2" to="." method="_on_player2_died"]

[editable path="ground"]
